# cellpool-hackathon

./: Cargo.toml  README.md  capsule.toml
cellpool/: Cargo.toml  README.md
cellpool/contracts/cellpool/: Cargo.toml
contracts/cellpool/: Cargo.toml
contracts/cellpool/src/: entry.rs  error.rs
coordinator/: Cargo.toml
coordinator/src/: main.rs
coordinator/tests/: demo.org  mint.json  proof.json  proof_result.json  rollup.json  rollup_result.json  state.json  tx1.json  tx2.json  tx3.json
proofs/: Cargo.toml
proofs/src/: lib.rs  proofs.rs  rollup.rs  serde.rs
proofs/src/account/: mod.rs
proofs/src/ledger/: mod.rs
proofs/src/signature/schnorr/: mod.rs
proofs/src/transaction/: constraints.rs  mod.rs
tests/: Cargo.toml
tests/src/: tests.rs
